<resources>
    <string name="app_name">PharmaTrying</string>
    <!--Login-->
    <string name="hintEmailLogin">Correo</string>
    <string name="hintPasswordLogin">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="lbRegisterLogin">¿No tienes usuario?</string>
    <string name="btnlbRegisterLogin">Registra tu usuario</string>
    <!--Register-->
    <string name="hintEmailRegister">Correo ha registrar como usuario...</string>
    <string name="hintPasswordRegister">Respectiva contraseña...</string>
    <string name="lbDescripcionRegister">Para poder registrar tu usuario en Pharma Trying has uso de un correo y una contraseña única con la que podrás ingresar en el programa</string>
    <string name="btnRegister">Registar Usuario</string>
    <string name="btn2Register">Regresar</string>
    <string name="errorUserExistRegister">El usuario ya existe en la aplicacion, por favor ingreselo en la pantalla LOGIN</string>
    <!--Menu Desplegable-->
    <string name="menuOpc1">Realizar una Compra</string>
    <string name="menuOpc2">Historial de Compras</string>
    <string name="menuOpc3">Cerrar Sesion</string>
</resources>